feat(health-ui): close hui-01..06 and hui-13 acceptance

--- a/crates/selene_adapter/src/web/app.html
+++ b/crates/selene_adapter/src/web/app.html
@@ -138,6 +138,7 @@
 
           <aside class="detail-column" aria-label="Issue timeline">
             <h2 id="detail-header">Select an issue from the center table.</h2>
+            <p id="detail-meta" class="detail-meta">Blocker: - | Deadline: -</p>
             <div class="timeline-toolbar">
               <span id="timeline-meta">Showing 0 of 0 events</span>
               <button id="timeline-load-more" type="button" class="hidden">Load older events</button>
